octant/octant-publish.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: octant
  name: octant
spec:
  selector:
    matchLabels:
      io.kompose.service: octant
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: octant
    spec:
      containers:
      - env:
        - name: OCTANT_NAMESPACE
          value: "default"
        - name: KUBECONFIG
          value: "/etc/kubernetes/admin.conf"
        - name: VIRTUAL_HOST
          value: octant.ext.perkplex.geekgalaxy.com
        - name: OCTANT_LISTENER_ADDR
          value: "0.0.0.0:9000"
        - name: OCTANT_CONTEXT
          value: "kubernetes-admin@kubernetes"
        - name: OCTANT_DISABLE_CLUSTER_OVERVIEW
          value: "true"
        image: sperkins/perkplex-octant:latest
        name: octant
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: octant-volume
        - mountPath: /etc/kubernetes/admin.conf
          name: kubeconfig
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: octant-volume
        persistentVolumeClaim:
          claimName: octant-volume-claim
      - name: kubeconfig
        hostPath:
          path: /etc/kubernetes/admin.conf
status: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 (36652f6)
  creationTimestamp: null
  labels:
    io.kompose.service: octant
  name: octant
spec:
  type: NodePort
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: octant
