octant/external-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: octant-external
  namespace: default
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: octant.ext.perkplex.geekgalaxy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: octant
          servicePort: 9000
